Bug 1590898 - Forward stream filter creation requests across PDocumentChannel. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D50898